# teb

./: .gitignore  .gitmodules  .travis.yml  .zenodo.json  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  Licence_CeCILL-C_V1-fr.txt  Makefile  README.md  README.txt  ThirdPartyNotices.txt  gfortran_args  index.html  mkmf.html  requirements.txt  search.html  zenodo.json
docs/: api-docs.md  api_docs.md  namelist-options.md  software-docs.md  tutorial.ipynb
input/: Forc_RAIN.txt  Forc_SNOW.txt
interface/: abor1_sfx.html  add_forecast_to_date_surf.html  albedo_from_nir_vis.html  alloc_teb_struct.html  assignment (=).html  avg_urban_fluxes.html  bem.html  bem_morpho.html  bem_morpho_struct.html  bld_e_budget.html  bld_occ_calendar.html  businger_phie.html  businger_phih.html  businger_phim.html  carbon_evol.html  chtc_rough_doe.html  chtc_smooth_lee_doe.html  chtc_smooth_wind_doe.html  chtc_up_doe.html  chtc_vert_doe.html  circumsolar_rad.html  close_file.html  close_namelist.html  day_of_week.html  dealloc_teb_struct.html  dpsat.html  dqsat.html  dqsati.html  dx_air_cooling_coil_cv.html  enth_fn_t_q.html  facade_e_budget.html  flag_gr_snow.html  flag_teb_veg_n.html  floor_layer_e_budget.html  flxsurf3bx.html  garden.html  get_luout.html  greenroof.html  ini_csts.html  ini_cturbs.html  (+64 more)
lists/: files.html  modules.html  procedures.html  types.html
mkmf_files/: balaji.css  cobweb.css
module/: modd_agri_n.html  modd_arch.html  modd_bem_cst.html  modd_bem_n.html  modd_bem_option_n.html  modd_bld_description_n.html  modd_canopy_n.html  modd_canopy_turb.html  modd_ch_emis_field_n.html  modd_ch_flake_n.html  modd_ch_isba_n.html  modd_ch_seaflux_n.html  modd_ch_snap_n.html  modd_ch_surf_n.html  modd_ch_teb_n.html  modd_ch_watflux_n.html  modd_co2v_par.html  modd_csts.html  modd_data_bem_n.html  modd_data_cover_n.html  modd_data_cover_par.html  modd_data_isba_n.html  modd_data_seaflux_n.html  modd_data_teb_n.html  modd_data_tsz0_n.html  modd_diag_evap_isba_n.html  modd_diag_misc_flake_n.html  modd_diag_misc_isba_n.html  modd_diag_misc_seaice_n.html  modd_diag_misc_teb_n.html  modd_diag_misc_teb_options_n.html  modd_diag_n.html  modd_diag_ocean_n.html  modd_diag_utci_teb_n.html  modd_dst_n.html  modd_dummy_surf_fields_n.html  modd_emis_gr_field_n.html  modd_flake_n.html  modd_flood_par.html  modd_forc_atm.html  (+120 more)
output_ref/: HVAC_COOL.txt  HVAC_HEAT.txt  H_TOWN.txt  LE_TOWN.txt  Q_CANYON.txt  RN_TOWN.txt  TI_BLD.txt  T_CANYON.txt  T_ROAD1.txt  T_ROOF1.txt  T_WALLA1.txt  T_WALLB1.txt  U_CANYON.txt
paper/: paper.bib  paper.md
proc/: abor1_sfx.html  add_forecast_to_date_surf.html  agri_init.html  agri_np_init.html  albedo_from_nir_vis.html  alloc_teb_struct.html  avg_urban_fluxes.html  bem.html  bem_init.html  bem_morpho.html  bem_morpho_struct.html  bem_np_init.html  bem_options_init.html  bld_desc_init.html  bld_e_budget.html  bld_occ_calendar.html  businger_phie_0d.html  businger_phie_1d.html  businger_phie_2d.html  businger_phie_3d.html  businger_phih_0d.html  businger_phih_1d.html  businger_phih_2d.html  businger_phih_3d.html  businger_phim_0d.html  businger_phim_1d.html  businger_phim_2d.html  businger_phim_3d.html  calcpsychrometricsfromrelhum.html  calcpsychrometricsfromtdewpoint.html  calcpsychrometricsfromtwetbulb.html  canopy_init.html  ch_emis_field_init.html  ch_emis_snap_init.html  ch_flake_init.html  ch_isba_init.html  ch_isba_np_init.html  ch_seaflux_init.html  ch_surf_init.html  ch_teb_init.html  (+233 more)
program/: driver.html
sourcefile/: abor1_sfx.f90.html  add_forecast_to_date_surf.f90.html  albedo_from_nir_vis.f90.html  alloc_teb_struct.f90.html  avg_urban_fluxes.f90.html  bem.f90.html  bem_morpho.f90.html  bem_morpho_struct.f90.html  bld_e_budget.f90.html  bld_occ_calendar.f90.html  circumsolar_rad.f90.html  close_file.f90.html  close_file_asc.f90.html  close_namelist.f90.html  day_of_week.f90.html  dealloc_teb_struct.f90.html  driver.f90.html  dx_air_cooling_coil_cv.f90.html  facade_e_budget.f90.html  flag_gr_snow.f90.html  flag_teb_vegn.f90.html  floor_layer_e_budget.f90.html  flxsurf3bx.f90.html  garden.f90.html  get_luout.f90.html  greenroof.f90.html  hook.f90.html  ini_csts.f90.html  ini_cturbs.f90.html  ini_ocean_csts.f90.html  ini_surf_csts.f90.html  isba_albedo.f90.html  isba_properties.f90.html  isba_snow_frac.f90.html  layer_e_budget.f90.html  layer_e_budget_get_coef.f90.html  mass_layer_e_budget.f90.html  modd_agrin.f90.html  modd_arch.f90.html  modd_bem_cst.f90.html  (+189 more)
src/: CMakeLists.txt  abor1_sfx.F90  add_forecast_to_date_surf.F90  alloc_teb_struct.F90  avg_urban_fluxes.F90  bem_morpho.F90  bem_morpho_struct.F90  bld_e_budget.F90  bld_occ_calendar.F90  close_namelist.F90  facade_e_budget.F90  flag_gr_snow.F90  flag_teb_vegn.F90  floor_layer_e_budget.F90  garden.F90  greenroof.F90  hook.F90  ini_cturbs.F90  ini_ocean_csts.F90  ini_surf_csts.F90  isba_albedo.F90  layer_e_budget.F90  layer_e_budget_get_coef.F90  mass_layer_e_budget.F90  modd_arch.F90  modd_bem_cst.F90  modd_bemn.F90  modd_canopyn.F90  modd_ch_seafluxn.F90  modd_ch_surfn.F90  modd_ch_watfluxn.F90  modd_csts.F90  modd_data_bemn.F90  modd_data_cover_par.F90  modd_data_covern.F90  modd_data_isban.F90  modd_data_tebn.F90  modd_data_tsz0n.F90  modd_diag_evap_isban.F90  modd_diag_misc_isban.F90  (+104 more)
src_driver/: abor1_sfx.F90  close_file.F90  driver.F90  modd_reprod_oper.F90  modd_surf_conf.F90  ol_read_atm.F90  ol_read_atm_ascii.F90  ol_time_interp_atm.F90  open_close_bin_asc_forc.F90  read_surf_atm.F90
src_proxi_SVAT/: garden_properties.F90  greenroof_properties.F90  modi_garden.F90  (+2 more)
tests/: CMakeLists.txt  README.md  run_tests.py  test.py
tests/CAPITOUL/: input.nml
tests/CAPITOUL/input/: Forc_LW.txt  Forc_QA.txt
tests/CAPITOUL/ref_output/: HVAC_HEAT.txt  LE_TOWN.txt  P_CANYON.txt  Q_CANYON.txt  T_CANYON.txt  T_ROOF1.txt
tests/MinimalDX/: README.md  compare.py  requirements.txt  run_tests.py
tests/cooling/: CMakeLists.txt  eplus_wrapper_cooling.f90  test_cooling.f90
tests/debugging/: README.md  test_cooling_point.f90
tests/make_vs_cmake/: README.md  compare_make_cmake.py  run_test.sh
(+408 files in other folders)
